--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body::before {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity value as desired */
-  background-image: url("/Users/uzoikejiofor/WebDevThings/NASAPicOfDay/img/NASAPhoto.jpg");
+  background-image: url("/Users/uzoikejiofor/Desktop/WebDevThings/NASAPictureOfTheDay_100Devs 00-25-24-944/img/NASAPhoto.jpg");
   opacity: 1;
   z-index: -1;
 }
